Fixed order of food on MobileMenu

--- a/src/components/_Catering.scss
+++ b/src/components/_Catering.scss
@@ -1,108 +1,71 @@
 .Catering {
-      background-color: rgb(242,242,242);
-      //padding: 2.0em;
-      width: 100%;
-      text-align: center;
-      .CateringWrap {
-        display: flex;
-        width: 100%;
-        justify-content: space-evenly;
-        .CateringOneHalf {
-          max-width: 300px;
-        }
-        .CateringSecondHalf {
-          max-width: 300px;
-        }
+  margin: 0;
+  padding: 0;
+  display: inline-flex;
+  .CateringWrap {
+    display: flex;
+    width: 100%;
+    padding-top: 150px;
+    text-align: center;
+      .column-1 {
+        padding: 0 10px 0 10px;
       }
-  span {
+      .column-2 {
+        padding: 0 10px 0 10px;
+      }
+      h1 {
+        margin: 10px 0 0 0;
+        padding: 20px;
+        font-family: adobe-garamond-pro;
+        font-weight: normal;
+        font-size: 2.15em;
+        color: #111;
+      }
+    span {
       display: inline-flex;
-      width: 5.5em;
-      height: 0.325em;
-      border-top: 0.225em solid #bf5252;
+      min-width: 300px;
+      height: 0.75px;
+      border-top: 0.5px solid rgba(51, 51, 51, 0.52);
       margin-top: 15px;
       margin-bottom: 15px;
     }
-    .size {
-	     display: inline-flex;
-    }
-    .size h3 {
-	     margin: 0.3em 0.3em 0.3em 0;
-       font-family: helvetica, sans-serif;
-       font-weight: 400;
-       font-style: normal;
-       text-transform: capitalize;
-     	 font-size: 1.3em;
-       margin-top: 1.2em;
-}
-.title h1 {
-  font-family: atrament-web, sans-serif;
-  color: #111;
-  font-weight: 400;
-  font-style: normal;
-	text-transform: uppercase;
-	font-size: 2.15em;
-  //margin-top: 1.53em;
-  margin-top: 1.15em;
-  margin-bottom: 0;
-}
-.food-item {
-.food h3 {
-  //font-family: atrament-web, sans-serif;
-  font-family: helvetica, sans-serif;
-  color: #111;
-  font-weight: 400;
-  font-style: normal;
-  text-transform: capitalize;
-	font-size: 1.3em;
-  margin-top: 1.2em;
-}
-.food p {
-	font-size: 1.2em;
-  color: #333;
-  font-family: helvetica, sans-serif;
-  font-weight: lighter;
-  font-style: normal;
-  letter-spacing: 0.02em;
-  //margin: 0.75em 3.0em 0.5em 0em;
-}
-.size p {
-  font-size: 1.2em;
-  color: #333;
-  font-family: helvetica, sans-serif;
-  font-weight: lighter;
-  font-style: normal;
-  letter-spacing: 0.02em;
-  //margin: 0.75em 3.0em 0.5em 0em;
-}
-}
-
-
-  /*Begin Responsive Style*/
-
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-
-  }
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    .menu {
+    .Outline {
       margin: 0;
       padding: 0;
-      max-width: 100%;
-      .menu-wrap {
-
-        width: 100%;
-
+      border: 1px solid rgba(219, 0, 0, 0.52);
+      text-align: left;
+      max-width: 400px;
+      h5 {
+        margin: 0 0 5px 0;
+        padding: 25px 0 0 25px;
+        font-size: 17.6px;
+        font-family: adobe-garamond-pro;
+        font-weight: bolder;
       }
-      .column-one {
-
-      }
-      .column-two {
-
-      }
-      .food p {
-        margin: 0;
-        padding: 0.45em 0 0.45em 0;
+      p {
+        max-width: 250px;
+        margin: 0 0 5px 0;
+        padding: 0 0 0 25px;
+        font-size: 16px;
+        color: #333;
+        font-family: adobe-garamond-pro;
+        font-weight: lighter;
+        font-style: normal;
+        letter-spacing: 0.02em;
       }
     }
   }
+}
 
+/*Begin Responsive Style*/
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .Catering {
+    .CateringWrap {
+      display: block;
+    }
+  }
 }
