--- a/src/components/_Menu.scss
+++ b/src/components/_Menu.scss
@@ -3,9 +3,22 @@
   padding: 0;
   display: inline-flex;
   .MenuWrap {
-      width: 100%;
-      padding-top: 150px;
-      text-align: center;
+    .mobile-menu {
+      display: none;
+    }
+    display: flex;
+    width: 100%;
+    padding-top: 150px;
+    text-align: center;
+      .column-1 {
+        padding: 0 10px 0 10px;
+      }
+      .column-2 {
+        padding: 0 10px 0 10px;
+      }
+      .column-3 {
+        padding: 0 10px 0 10px;
+      }
       h1 {
         margin: 10px 0 0 0;
         padding: 20px;
@@ -58,7 +71,39 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .Menu {
     .MenuWrap {
+      .column-1 {
+        display: none;
+      }
+      .column-2 {
+        display: none;
+      }
+      .column-3 {
+        display: none;
+      }
+      .mobile-menu {
+        display: block;
+      }
       padding-top: 110px;
+      display: flex;
+      flex-flow: column;
+      #seafood {
+        order: 1;
+      }
+      #vegetarian {
+        order: 2;
+      }
+      #carne {
+        order: 3;
+      }
+      #big-plates {
+        order: 4;
+      }
+      #pizza {
+        order: 5;
+      }
+      #accompaniments {
+        order: 6;
+      }
       .Outline {
 
       }
